renamed the title to Soccer Relay in writup

--- a/P01.md.html
+++ b/P01.md.html
@@ -2,7 +2,7 @@
 
 <!-- This template is based on the Princeton COS 423 LaTeX assignment template -->
 
-**P01 Greedy**
+**Soccer Relay**
 
 # Author(s)
 
@@ -12,9 +12,9 @@
                          |  <!-- must include spaces in header for Markdeep to see this as a table -->
 ------------------------ | -------------
 name                     | David Deng
-time to complete         |  hours
+time to complete         | 5 hours
 partner / collaborators  | Qiang Wang
-additional help          | 
+additional help          | Input from Dr. Denning
 </div>
 
 # Problem Description
